refactor: resolve comments